--- a/src/styles/components/_container.scss
+++ b/src/styles/components/_container.scss
@@ -5,6 +5,23 @@
   justify-content: center;
 }
 
+.row-container {
+  display: flex;
+  align-items: center;
+  width: 100%;
+}
+
+.column-container {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  width: 100%;
+}
+
+.space-between {
+  justify-content: space-between;
+}
+
 .bg-container {
   width: 100vw;
   position: absolute;
