--- a/src/styles/components/_form.scss
+++ b/src/styles/components/_form.scss
@@ -1,8 +1,8 @@
-input {
+.form-input {
   width: 300px;
-  height: 50px;
+  height: 40px;
   margin-bottom: 5%;
-  font-size: 1.2rem;
+  font-size: 1.1rem;
   border: none;
   border-bottom:1px solid $light-grey;
 }
@@ -18,7 +18,7 @@ form {
   margin: 5% auto;
 }
 
-button {
+.button-bg {
   height: 50px;
   width: 300px;
   font-size: 1.2rem;
