--- a/src/styles/components/_form.scss
+++ b/src/styles/components/_form.scss
@@ -1,5 +1,5 @@
 .form-input {
-  width: 300px;
+  width: 400px;
   height: 40px;
   margin-bottom: 5%;
   font-size: 1.1rem;
@@ -19,8 +19,8 @@ form {
 }
 
 .button-bg {
-  height: 50px;
-  width: 300px;
+  height: 64px;
+  width: 400px;
   font-size: 1.2rem;
   background-color: $blue;
   color: white;
@@ -28,3 +28,40 @@ form {
   position: absolute;
   bottom: 10%;
 }
+
+.button-bg:disabled {
+  background-color: $smoke-grey;
+}
+
+.errMsg {
+  position: absolute;
+  top: 10px;
+  width: 60%;
+  color: red;
+  left: 20%;
+  text-align: center;
+  font-size: 1.2rem;
+}
+
+.msgTitle {
+  font-size: 42px;
+  color: black;
+  margin-top: 44px;
+  font-family: "Mont-Regular";
+}
+
+.msgContent {
+  font-size: 20px;
+  line-height: 30px;
+}
+
+.formTitle {
+  font-size: 42px;
+  color: $blue;
+  font-family: "Mont-Regular";
+}
+
+span {
+  font-family: "Mont-Bold";
+}
+
