complete first draft version

--- a/src/styles/components/_container.scss
+++ b/src/styles/components/_container.scss
@@ -50,4 +50,17 @@
   position: relative;
 }
 
+.codeExpire-container {
+  margin: 20% 30%;
+  background-color: rgb(55, 63, 63);
+  width: 40%;
+}
+
+.codeExpire-container > p {
+  padding: 2%;
+  font-size: 1.2rem;
+  color: white;
+  text-align: center;
+}
+
 
