--- a/src/styles/components/_form.scss
+++ b/src/styles/components/_form.scss
@@ -1,21 +1,32 @@
-.form-input {
-  width: 400px;
-  height: 40px;
-  margin-bottom: 5%;
-  font-size: 1.1rem;
-  border: none;
-  border-bottom:1px solid $light-grey;
-}
-input::placeholder {
-  color: $smoke-grey;
-}
-
 form {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin: 5% auto;
+  margin: 0px auto;
+}
+
+input::placeholder {
+  color: $light-grey;
+}
+
+.formTitle {
+  font-size: 42px;
+  line-height: 50px;
+  margin-top: 80px;
+  margin-bottom: 50px;
+  color: $blue;
+  font-family: "Mont-Regular";
+}
+
+.form-input {
+  width: 400px;
+  margin-bottom: 10%;
+  font-size: 20px;
+  line-height: 30px;
+  border: none;
+  border-bottom:1px solid $pale-grey;
+  padding-bottom: 2%;
 }
 
 .button-bg {
@@ -30,7 +41,7 @@ form {
 }
 
 .button-bg:disabled {
-  background-color: $smoke-grey;
+  background-color: $light-grey;
 }
 
 .errMsg {
@@ -55,13 +66,19 @@ form {
   line-height: 30px;
 }
 
-.formTitle {
-  font-size: 42px;
-  color: $blue;
-  font-family: "Mont-Regular";
-}
+
 
 span {
   font-family: "Mont-Bold";
 }
 
+.bg-img {
+  width: 110%;
+  margin: 0% -4% -6%;
+}
+
+.ok-img {
+  width: 160.40px;
+  height: 160.40px;
+  margin-top: 124.80px;
+}
