--- a/src/styles/components/_container.scss
+++ b/src/styles/components/_container.scss
@@ -34,7 +34,7 @@
 .mid-container {
   background-color: white;
   width: 600px;
-  height: 789.20px; // height is fixed
+  height: 789.20px;
   margin-top: 80px;
   position: relative;
 }
